Se añadió un ejercicio de ejemplo - Ejercicio 10 del tp 2 y se dibujan las filas y columnas

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
 h1{
     color: blue;
 }
+table{
+    border: 1px solid royalblue;
+}
+td{
+    border: 1px solid royalblue;
+    padding: 1rem;
+}
